--- a/src/style.css
+++ b/src/style.css
@@ -365,8 +365,8 @@ video {
   margin-left: 7px;
 }
 .dtc-activate__controls-dtc
-.dtc-activate__button
-.button-input_blue:not(.button-input-disabled) {
+  .dtc-activate__button
+  .button-input_blue:not(.button-input-disabled) {
   background: #2c2c2c;
   border: 0.834356px solid #2c2c2c;
   border-radius: 5px;
@@ -380,19 +380,19 @@ video {
   margin: 0px 9px 0px 0px;
 }
 .dtc-activate__controls-dtc
-.dtc-activate__politics
-.control-checkbox
-input[type="checkbox"] {
+  .dtc-activate__politics
+  .control-checkbox
+  input[type="checkbox"] {
   cursor: pointer;
 }
 .dtc-activate__controls-dtc
-.dtc-activate__politics
-.control-checkbox
-input:checked
-~ .control-checkbox__helper:not(.control-checkbox__helper_minus) {
+  .dtc-activate__politics
+  .control-checkbox
+  input:checked
+  ~ .control-checkbox__helper:not(.control-checkbox__helper_minus) {
   background: #fff
-  url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iMTEiIHZpZXdCb3g9IjAgMCAxMCAxMSIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTEuMDAxMTEgMy43MDc0NUwzLjQ4MDI0IDguNjY1NzFMOC41ODQxOSAxLjk4MTg1IiBzdHJva2U9IiM1NzU3NTciIHN0cm9rZS13aWR0aD0iMiIgc3Ryb2tlLWxpbmVjYXA9InJvdW5kIi8+Cjwvc3ZnPgo=)
-  no-repeat;
+    url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iMTEiIHZpZXdCb3g9IjAgMCAxMCAxMSIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTEuMDAxMTEgMy43MDc0NUwzLjQ4MDI0IDguNjY1NzFMOC41ODQxOSAxLjk4MTg1IiBzdHJva2U9IiM1NzU3NTciIHN0cm9rZS13aWR0aD0iMiIgc3Ryb2tlLWxpbmVjYXA9InJvdW5kIi8+Cjwvc3ZnPgo=)
+    no-repeat;
   background-size: 70%;
   background-position: center;
 }
@@ -488,8 +488,8 @@ input:checked
   align-items: center;
 }
 .dtc-feedback-modal-dtc
-.dtc-feedback__buttons[data-btns="dtc"]
-.dtc-feedback__button {
+  .dtc-feedback__buttons[data-btns="dtc"]
+  .dtc-feedback__button {
   display: flex;
   align-items: center;
   background: #ffffff;
@@ -500,8 +500,8 @@ input:checked
   margin-top: 8px;
 }
 .dtc-feedback-modal-dtc
-.dtc-feedback__buttons[data-btns="dtc"]
-.dtc-feedback__button:first-child {
+  .dtc-feedback__buttons[data-btns="dtc"]
+  .dtc-feedback__button:first-child {
   margin-left: 0;
 }
 /*.dtc-feedback-modal-dtc .dtc-feedback__buttons[data-btns="dtc"] .dtc-feedback__button:hover {*/
@@ -543,8 +543,8 @@ input:checked
   color: #2e3640;
 }
 .dtc-feedback-modal-dtc
-.dtc-feedback__buttons[data-btns="dtc"]
-.dtc-feedback__button-img {
+  .dtc-feedback__buttons[data-btns="dtc"]
+  .dtc-feedback__button-img {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -556,16 +556,16 @@ input:checked
 }
 
 .dtc-feedback-modal-dtc
-.dtc-feedback__buttons[data-btns="partner"]
-.dtc-feedback__button-img {
+  .dtc-feedback__buttons[data-btns="partner"]
+  .dtc-feedback__button-img {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .dtc-feedback-modal-dtc
-.dtc-feedback__buttons[data-btns="dtc"]
-.dtc-feedback__button-img
-svg {
+  .dtc-feedback__buttons[data-btns="dtc"]
+  .dtc-feedback__button-img
+  svg {
   fill: #000;
 }
 .dtc-feedback-modal-dtc .dtc-feedback__button:first-child {
@@ -598,8 +598,8 @@ svg {
 
 @media (max-width: 1350px) {
   .dtc-feedback-modal-dtc
-  .dtc-feedback__buttons[data-btns="dtc"]
-  .dtc-feedback__button {
+    .dtc-feedback__buttons[data-btns="dtc"]
+    .dtc-feedback__button {
     font-size: 12px;
   }
   .dtc-activate__controls-dtc .dtc-activate__phone #dtc-activation-phone {
@@ -629,98 +629,76 @@ svg {
   }
 }
 
-.dtc-select-color-list{
-  max-height: 110px;
-  overflow-y: auto;
-  /*height: 100%;*/
-  position: absolute;
-  min-width: 115px;
-  z-index: 5;
-}
-.dtc-bottom-list .dtc-select-color-list{
-  bottom: 6px;
-  left: 126px;
-}
-
-.dtc-select-color-list li{
-  display: flex;
-  align-items: center;
-  background-color: #ffffff;
-  border: 1px solid #d9d9d9;
-  border-radius: 3px;
-}
-
-.dtc-select-color-list .card-task__types-item-label {
-  padding: 2px 9px;
-}
-
-.dtc-select-color-list li p{
-  padding-left: 6px;
-}
-
-.dtc-select-color-list li span, .dtc-square{
-  width: 16px;
-  height: 16px;
-  display: block;
-  border-radius: 50%;
-}
-
-.dtc-color-text p{
-  padding-left: 8px;
-}
-
-.dtc-note .dtc-color-text{
-  height: 24px;
-  background-color: #ffffff;
-  min-width: 115px;
-  display: inline-flex;
-  align-items: center;
-  padding-left:8px ;
-  border-bottom-left-radius: 7px;
-  border-top-left-radius: 7px;
-  border-top-right-radius: 3px;
-  border:1px solid #c5c5c5;
-  border-right-color: transparent;
-}
-
-.card-task .dtc-color-picker{
-  float: right;
-}
 
 .card-holder__feed .notes-wrapper__tasks .feed-note-wrapper{
   margin-bottom: 0!important;
 }
 
-.dtc-color-picker p{
-  color:#363b44;
-}
-
-
 .card-task__types-item-label:hover {
   background-color: #f5f5f5!important;
 }
-
-.dtc-select-color-list{
-  min-width: 145px;
-  min-height: 78px;
-  max-height: 110px;
-}
-
-.dtc-note.dtc-color-picker{
-  position: absolute;
-  right: 0;
-  top: -1px;
-  z-index: 999;
-}
-
-.dtc-top-list .dtc-select-color-list{
-  right: 123px;
-  top:0}
-
 .fixed{
-  position: static!important;
+    position: static!important;
 }
-
 .dtc-drawer-fixed{
   position: fixed;
+}
+
+.dct_custom_field_group{
+  background-color: #b9d3e52e;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 10px;
+  border: 1px solid #e3e3e3;
+  transition: 0.3s all;
+}
+
+.dct_angle_bottom::after {
+  content: '∟';
+  margin-right: 10px;
+  font-size: 18px;
+  transform: rotate(-45deg);
+  position: absolute;
+  right: 0;
+  top: 1px;
+}
+
+.dct_angle_top::after {
+  content: '∟';
+  margin-right: 10px;
+  font-size: 18px;
+  transform: rotate(135deg);
+  position: absolute;
+  right: 0;
+  top: 7px;
+
+}
+
+.dtc-color-main .cf-field-wrapper__body:not(.edit-mode) {
+  background-color:#b9d3e52e!important;
+}
+
+
+.dtc-elem-hidden{
+  transition: 0.3s all;
+  display: none!important;
+}
+
+.dct_custom_field_group .linked-form__field__label{
+  font-size: 16px;
+  color: #343434;
+}
+
+html[data-color-scheme="dark"] .dct_custom_field_group .linked-form__field__label{
+  color: #7f8ba4;
+}
+
+.dtc-elem-hidden .linked-form__field__value{
+  display: none;
+}
+
+.dct-group-disabled{
+  opacity: 0.5;
+  pointer-events: none;
 }
